output/dev/llvm/externprintstring.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/externprintstring.llvm:9:13: error: '@print_string' defined with type 'void (i32*)*'
  call void @print_string([15 x i16] [i16 26658, i16 27749, i16 28524, i16 30496, i16 29295, i16 25708, i16 28252, i16 34, i16 0, i16 0, i16 0, i16 22528, i16 -13980, i16 257, i16 0])
            ^
